# Safulate

./: .gitignore  example.saf  fut.saf  guide.saf  main.py  pyproject.toml  req.py  sequence_test.py  test.py  test.saf
.github/workflows/: build.yml  format.yml  lint.yml  publish.yml  tests.yml
examples/: custom_lib_example.py  custom_object.saf  enum.saf
examples/parse_json/: main.py  main.saf  output.txt
safulate/: __init__.py  __main__.py  _types.py  asts.py  cli.py  debug.py  enums.py  environment.py  errors.py  executer.py  exporter.py  interpreter.py  lexer.py  lib_exporter.py  lib_manager.py  mock.py  native_context.py  natives.py  objects.py  parser.py  properties.py  py_libs.py  repl.py  tokens.py  utils.py  values.py
safulate/interpreter/: __init__.py  enums.py  environment.py  interpreter.py  lib_manager.py  native_context.py  objects.py  repl.py
safulate/interpreter/libs/: _msgspec_wrapper.py  builtins.py  inspect.py  json.py  regex.py  toml.py  types.py  yaml.py
safulate/lexer/: __init__.py  enums.py  lexer.py  tokens.py
safulate/libs/: _msgspec_wrapper.py  builtins.py  hello.py  json.py  regex.py  toml.py  types.py  yaml.py
safulate/parser/: __init__.py  asts.py  enums.py  parser.py  specs.py
safulate/tokens/: __init__.py  base.py  core.py  function.py  mixins.py
tests/: test_examples.py  test_saf_files.py
tests/saf_files/: test_assignment.saf  test_block_scopes.saf  test_dynamic_decl.saf  test_dynamic_ids.saf  test_enum.saf  test_for_loop.saf  test_func_scopes.saf  test_funcs.saf  test_redeclaration.saf
