[project]
name = "safulate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.19.0",
    "packaging>=24.2",
    "pyyaml>=6.0.2",
    "tomli-w>=1.2.0",
]

[tool.ruff]
exclude = ["*venv*"]

[tool.ruff.lint]
select = [
    "C4", # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E", # https://docs.astral.sh/ruff/rules/#error-e_1
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "G", # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    "PTH", # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "RUF", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "TC", # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W", # https://docs.astral.sh/ruff/rules/#warning-w
    "PERF", # https://docs.astral.sh/ruff/rules/#perflint-perf
    "ANN",  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "PGH", # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PLE", # https://docs.astral.sh/ruff/rules/#error-e_1
]
ignore = [
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "SIM105", # https://docs.astral.sh/ruff/rules/suppressible-exception/
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
]

[tool.ruff.lint.per-file-ignores]
"safulate/__init__.py" = [
    "F403" # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pyright]
include = [
    "tests",
    "flogin",
    "examples",
]
pythonPlatform = "Windows"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportMissingTypeStubs = false
